# hello15

./: Cargo.toml  package.json  pyproject.toml
frontend/: package.json
shared-libs/ml-utils/: pyproject.toml
shared-libs/ui-components/: package.json
test/test/test/: Cargo.toml  package.json  requirements.txt
