[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-utils"
version = "0.1.0"
description = "Machine Learning Utilities - CONTAINS DEPENDENCY CONFUSION VULNERABILITIES"
authors = [
    {name = "ML Team", email = "ml@company.com"},
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.2.0",
    "company-ml-core>=2.1.0",
    "internal-feature-store>=1.5.3",
    "proprietary-model-registry>=3.0.1",
    "enterprise-data-connector>=2.4.2",
    "custom-preprocessing-pipeline>=1.8.0",
]

[project.optional-dependencies]
gpu = [
    "tensorflow>=2.12.0",
    "company-gpu-optimizations>=1.3.0",
    "internal-cuda-utils>=2.0.5",
]
dev = [
    "pytest>=7.2.0",
    "company-testing-framework>=1.1.2",
    "internal-benchmark-tools>=0.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_utils*"]
