[workspace]
members = [
    "apps/*",
    "crates/auth-lib",
]
exclude = [
    "target",
    "examples",
]

[workspace.dependencies]
tokio12321321321321312 = "1.28"
serde1232131232132132131 = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Test Team <test@company.com>"]

# This is a workspace root, no [package] section needed
